@@ -680,11 +680,11 @@ autoscale()
      * Calculate translation
      */
     if (x_scale < y_scale) {
-	screen.trans_x = -(int)((double)IMG_EXTRA*screen.scale);
-	screen.trans_y = -(int)((double)((screen.drawing_area->allocation.height-screen.scale*(max_height+IMG_EXTRA_2))/2.0));
+	screen.trans_x = 0;
+	screen.trans_y = -(int)((double)((screen.drawing_area->allocation.height-screen.scale*(max_height))/2.0));
     } else {
-	screen.trans_x = -(int)((double)((screen.drawing_area->allocation.width-screen.scale*(max_width+IMG_EXTRA_2))/2.0));
-	screen.trans_y = -(int)((double)IMG_EXTRA*screen.scale);
+	screen.trans_x = -(int)((double)((screen.drawing_area->allocation.width-screen.scale*(max_width))/2.0));
+	screen.trans_y = 0;
     }
 
     return;
@@ -951,9 +951,9 @@ redraw_pixmap(GtkWidget *widget)
      * bigger so things on the edges comes inside. Actual width is
      * abs(max) + abs(min) -> max - min. Same with height.
      */
-    max_width = (int)floor((dmax_x - dmin_x + IMG_EXTRA) * 
+    max_width = (int)floor((dmax_x - dmin_x) * 
 			   (double)screen.scale);
-    max_height = (int)floor((dmax_y - dmin_y + IMG_EXTRA) * 
+    max_height = (int)floor((dmax_y - dmin_y) * 
 			    (double)screen.scale);
 
     /* 
@@ -1438,8 +1438,8 @@ expose_event (GtkWidget *widget, GdkEventExpose *event)
     {
 	    double dx, dy;
 
-	    dx = screen.gerber_bbox.x2-screen.gerber_bbox.x1+IMG_EXTRA;
-	    dy = screen.gerber_bbox.y2-screen.gerber_bbox.y1+IMG_EXTRA;
+	    dx = screen.gerber_bbox.x2-screen.gerber_bbox.x1;
+	    dy = screen.gerber_bbox.y2-screen.gerber_bbox.y1;
 	    gdk_gc_set_foreground(gc, screen.dist_measure_color);
 	    gdk_draw_rectangle(widget->window, gc, FALSE, 
 			       (screen.gerber_bbox.x1-1.1)*screen.scale - screen.trans_x,
